--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@exponent/vector-icons": "~2.0.3",
     "react": "~15.3.2",
     "react-native": "git+https://github.com/exponentjs/react-native#sdk-11.0.3",
-    "@exponent/ex-navigation": "~2.0.0"
+    "@exponent/ex-navigation": "~2.0.0",
+    "react-native-hr" : "*"
   }
 }
