--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "react": "~15.3.2",
     "react-native": "git+https://github.com/exponentjs/react-native#sdk-11.0.3",
     "@exponent/ex-navigation": "~2.0.0",
-    "react-native-hr" : "*"
+    "react-native-hr" : "*",
+    "react-native-drawer" : "*",
+    "react-native-icons" : "*"
   }
 }
