flow changes and more map stuff

--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
   "private": true,
   "main": "main.js",
   "dependencies": {
+    "@exponent/ex-navigation": "~2.0.0",
     "@exponent/vector-icons": "~2.0.3",
     "exponent": "~11.0.2",
     "react": "~15.3.2",
     "react-native": "git+https://github.com/exponentjs/react-native#sdk-11.0.3",
-    "@exponent/ex-navigation": "~2.0.0",
-    "react-native-hr" : "*",
-    "react-native-drawer" : "*",
-    "react-native-icons" : "*",
     "react-native-countdown": "0.0.3",
     "react-native-drag-drop": "^0.1.0",
+    "react-native-drawer": "*",
+    "react-native-dropdown": "0.0.6",
     "react-native-form-generator": "0.9.9",
+    "react-native-hr": "*",
+    "react-native-icons": "*",
     "react-native-menu": "^0.20.2",
     "react-native-selectme": "^1.2.3",
     "react-native-spinkit": "*",
