--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@exponent/vector-icons": "~2.0.3",
     "exponent": "~11.0.2",
     "react": "~15.3.2",
+    "react-google-maps": "^6.0.1",
     "react-native": "git+https://github.com/exponentjs/react-native#sdk-11.0.3",
     "react-native-countdown": "0.0.3",
     "react-native-drag-drop": "^0.1.0",
